--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
     <title>Reto Grupal</title>
 </head>
 <body>
-    probando jhon
+    <main>
+        <section></section>
+        <section>
+            <div class="title-2">
+                <h2>OUR CREATIONS</h2>
+                <button class="btn-1">SEE ALL</button>
+            </div>
+            <div class="image-container">
+                <img src="./images/desktop/image-deep-earth.jpg" alt="">
+                <img src="./images/desktop/image-night-arcade.jpg" alt="">
+                <img src="./images/desktop/image-soccer-team.jpg" alt="">
+                <img src="./images/desktop/image-grid.jpg" alt="">
+            </div>
+            <div class="image-container">
+                <img src="./images/desktop/image-from-above.jpg" alt="">
+                <img src="./images/desktop/image-pocket-borealis.jpg" alt="">
+                <img src="./images/desktop/image-curiosity.jpg" alt="">
+                <img src="./images/desktop/image-fisheye.jpg" alt="">
+            </div>
+            
+        </section>
+    </main>
 </body>
 </html>
