--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./main.css" />
     <title>Reto Grupal</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <div class="link-bar">
+        <h2 class="name-logo">loopstudios</h2>
+        <nav>
+          <ul class="link-header">
+            <li class="link-top">About</li>
+            <li class="link-top">Careers</li>
+            <li class="link-top">Events</li>
+            <li class="link-top">Products</li>
+            <li class="link-top">Support</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="title-header">
+        <h1>Immersive experiences that deliver</h1>
+      </div>
+    </header>
+  </body>
 </html>
