--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reto Grupal</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./main.css">
+  <title>Reto Grupal</title>
 </head>
+
 <body>
-    
+  <footer>
+    <div class="items-izquierda">
+      <h1>loopstudios</h1>
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>Carees</li>
+          <li>Events</li>
+          <li>Products</li>
+          <li>Support</li>
+        </ul>
+      </nav>
+    </div>
+    <div class="items-derecha">
+      <figure>
+        <img src="./imagenesfooter/icon-facebook.svg" alt="">
+        <img src="./imagenesfooter/icon-twitter.svg" alt="">
+        <img src="./imagenesfooter/icon-pinterest.svg" alt="">
+        <img src="./imagenesfooter/icon-instagram.svg" alt="">
+      </figure>
+      <p>2021 Loppstudios. All rights reserved.</p>
+    </div>
+
+  </footer>
 </body>
+
 </html>
