--- a/index.html
+++ b/index.html
@@ -11,7 +11,39 @@
       href="./favicon-32x32.png"
     />
     <link rel="stylesheet" href="./main.css" />
-    <title>Reto Grupal</title>
+    <!-- Primary Meta Tags -->
+    <title>Reto Grupal 03</title>
+    <meta name="title" content="Reto Grupal 03" />
+    <meta
+      name="description"
+      content="Este es un reto creado con HTML y CSS por Alonso Lavado, Jorge García, Jhon Orrego y Fernando Hervias. "
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://grupo-03-minihackaton.vercel.app/"
+    />
+    <meta property="og:title" content="Reto Grupal 03" />
+    <meta
+      property="og:description"
+      content="Este es un reto creado con HTML y CSS por Alonso Lavado, Jorge García, Jhon Orrego y Fernando Hervias. "
+    />
+    <meta property="og:image" content="https://i.postimg.cc/Qdjhryt1/Reto-Grupal03.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://grupo-03-minihackaton.vercel.app/"
+    />
+    <meta property="twitter:title" content="Reto Grupal 03" />
+    <meta
+      property="twitter:description"
+      content="Este es un reto creado con HTML y CSS por Alonso Lavado, Jorge García, Jhon Orrego y Fernando Hervias. "
+    />
+    <meta property="twitter:image" content="https://i.postimg.cc/Qdjhryt1/Reto-Grupal03.jpg" />
   </head>
   <body>
     <header class="header">
@@ -52,50 +84,49 @@
       </section>
       <section>
         <div class="title-2">
-            <h2>OUR CREATIONS</h2>
-            <button class="btn-1">SEE ALL</button>
+          <h2>OUR CREATIONS</h2>
+          <button class="btn-1">SEE ALL</button>
         </div>
         <div class="container">
-            <div class="image-container">
-                <div class="image-container2">
-                    <img src="./images/desktop/image-deep-earth.jpg" alt="">
-                    <img src="./images/desktop/image-night-arcade.jpg" alt="">
-                    <img src="./images/desktop/image-soccer-team.jpg" alt="">
-                    <img src="./images/desktop/image-grid.jpg" alt="">
-                </div>
-                <div class="image-container2">
-                    <img src="./images/desktop/image-from-above.jpg" alt="">
-                    <img src="./images/desktop/image-pocket-borealis.jpg" alt="">
-                    <img src="./images/desktop/image-curiosity.jpg" alt="">
-                    <img src="./images/desktop/image-fisheye.jpg" alt="">
-                </div>
+          <div class="image-container">
+            <div class="image-container2">
+              <img src="./images/desktop/image-deep-earth.jpg" alt="" />
+              <img src="./images/desktop/image-night-arcade.jpg" alt="" />
+              <img src="./images/desktop/image-soccer-team.jpg" alt="" />
+              <img src="./images/desktop/image-grid.jpg" alt="" />
             </div>
+            <div class="image-container2">
+              <img src="./images/desktop/image-from-above.jpg" alt="" />
+              <img src="./images/desktop/image-pocket-borealis.jpg" alt="" />
+              <img src="./images/desktop/image-curiosity.jpg" alt="" />
+              <img src="./images/desktop/image-fisheye.jpg" alt="" />
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
     </main>
     <footer>
-        <div class="items-izquierda">
-          <h1>loopstudios</h1>
-          <nav>
-            <ul>
-              <li>About</li>
-              <li>Carees</li>
-              <li>Events</li>
-              <li>Products</li>
-              <li>Support</li>
-            </ul>
-          </nav>
-        </div>
-        <div class="items-derecha">
-          <figure>
-            <img src="./imagenesfooter/icon-facebook.svg" alt="">
-            <img src="./imagenesfooter/icon-twitter.svg" alt="">
-            <img src="./imagenesfooter/icon-pinterest.svg" alt="">
-            <img src="./imagenesfooter/icon-instagram.svg" alt="">
-          </figure>
-          <p>2021 Loppstudios. All rights reserved.</p>
-        </div>
-      </footer>
+      <div class="items-izquierda">
+        <h1>loopstudios</h1>
+        <nav>
+          <ul>
+            <li>About</li>
+            <li>Carees</li>
+            <li>Events</li>
+            <li>Products</li>
+            <li>Support</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="items-derecha">
+        <figure>
+          <img src="./imagenesfooter/icon-facebook.svg" alt="" />
+          <img src="./imagenesfooter/icon-twitter.svg" alt="" />
+          <img src="./imagenesfooter/icon-pinterest.svg" alt="" />
+          <img src="./imagenesfooter/icon-instagram.svg" alt="" />
+        </figure>
+        <p>2021 Loppstudios. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
-
