--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <li class="link-top">Events</li>
             <li class="link-top">Products</li>
             <li class="link-top">Support</li>
+            <li class="link-top"><a href="./login.html">Login</a></li>
           </ul>
         </nav>
       </div>
